# weenyterm

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PRIVACY.md  README-DISTRO-MAINTAINER.md  README.md  get-deps  mkdocs_macros.py
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug.yml  build-problem.md  config.yml
.github/workflows/: gen_centos8.yml  gen_centos8_continuous.yml  gen_centos8_tag.yml  gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian10.3.yml  gen_debian10.3_continuous.yml  gen_debian10.3_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora37.yml  gen_fedora37_continuous.yml  gen_fedora37_tag.yml  gen_fedora38.yml  gen_fedora38_continuous.yml  gen_fedora38_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  termwiz.yml  weenyterm_ssh.yml
assets/: open-weenyterm-here  weenyterm-nautilus.py  weenyterm.appdata.xml  weenyterm.desktop
assets/flatpak/: org.weenyfurlong.weenyterm.appdata.template.xml  org.weenyfurlong.weenyterm.json  org.weenyfurlong.weenyterm.template.json
assets/icon/: icon.icns  terminal2_resize.icns  update.sh
assets/shell-completion/: bash  fish  zsh
assets/shell-integration/: weenyterm.sh
async_ossl/: Cargo.toml
base91/: Cargo.toml
base91/src/: lib.rs
bidi/: Cargo.toml  LICENSE.md  README.md
bidi/examples/: shaping.rs
bidi/src/: lib.rs
bidi/tests/: conformance.rs
bintree/: Cargo.toml
ci/: PKGBUILD.template  add-color-screen-shots.sh  appimage.sh  build-docs.sh  check-rust-version.sh  create-release.sh  deploy.sh  flatpak.sh  generate-docs.py  generate-workflows.py  make-color-screen-shots.sh  make-flathub-pr.sh  make-winget-pr.sh  source-archive.sh  subst-release-info.py  update-derived-files.sh  weenyterm-homebrew-macos.rb.template  weenyterm-linuxbrew.rb.template  windows-installer.iss
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml  LICENSE.md
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  bell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
docs/: README.markdown  book.toml  changelog.md  contributing.md  copymode.md  escape-sequences.md  faq.md  features.md  help.md  hyperlinks.md  imgcat.md  index.md  installation.md  mkdocs-base.yml  multiplexing.md  quickselect.md  scrollback.md  serial.md  shell-integration.md  sponsor.md  ssh.md  troubleshooting.md  what-is-a-terminal.md
docs/cli/: connect.md  general.md  imgcat.md  ls-fonts.md  record.md  replay.md  serial.md  set-working-directory.md  show-keys.md  ssh.md  start.md
docs/colorschemes/: data.json
docs/config/: appearance.md  default-keys.md  files.md  font-shaping.md  fonts.md  key-encoding.md  key-tables.md  keyboard-concepts.md  keys.md  launch.md  mouse.md
docs/examples/: cmd-synopsis-weenyterm--help.txt  cmd-synopsis-weenyterm-cli-activate-pane--help.txt  cmd-synopsis-weenyterm-cli-activate-pane-direction--help.txt  cmd-synopsis-weenyterm-cli-activate-tab--help.txt  cmd-synopsis-weenyterm-cli-adjust-pane-size--help.txt  cmd-synopsis-weenyterm-cli-get-pane-direction--help.txt  cmd-synopsis-weenyterm-cli-get-text--help.txt  cmd-synopsis-weenyterm-cli-kill-pane--help.txt  cmd-synopsis-weenyterm-cli-list--help.txt  cmd-synopsis-weenyterm-cli-list-clients--help.txt  (+20 more)
env-bootstrap/: Cargo.toml
filedescriptor/: Cargo.toml
licenses/: README.md
lua-api-crates/: README.md
lua-api-crates/share-data/: Cargo.toml
lua-api-crates/share-data/src/: lib.rs
luahelper/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/: Cargo.toml
nix/: flake.nix
procinfo/: Cargo.toml
promise/: Cargo.toml
pty/: Cargo.toml
rangeset/: Cargo.toml
ratelim/: Cargo.toml
strip-ansi-escapes/: Cargo.toml
sync-color-schemes/: Cargo.toml
tabout/: Cargo.toml
term/: Cargo.toml  README.md
termwiz/: CHANGELOG.md  Cargo.toml
test-data/: extract-x11-icon.sh
umask/: Cargo.toml
vtparse/: Cargo.toml
weenyterm/: Cargo.toml
weenyterm-blob-leases/: Cargo.toml
weenyterm-client/: Cargo.toml
weenyterm-dynamic/: Cargo.toml
weenyterm-dynamic/derive/: Cargo.toml  LICENSE.md
weenyterm-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
weenyterm-dynamic/src/: lib.rs
weenyterm-dynamic/tests/: fromdynamic.rs  todynamic.rs
weenyterm-font/: Cargo.toml
weenyterm-gui/: Cargo.toml  build.rs
weenyterm-gui-subcommands/: Cargo.toml
weenyterm-gui/src/: commands.rs  customglyph.rs  download.rs  frontend.rs  glyph-frag.glsl  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  selection.rs  shapecache.rs  spawn.rs  tabbar.rs  update.rs  utilsprites.rs
weenyterm-gui/src/overlay/: confirm_close_pane.rs  copy.rs  debug.rs  mod.rs  prompt.rs  quickselect.rs  selector.rs
weenyterm-gui/src/scripting/: guiwin.rs  mod.rs
weenyterm-gui/src/termwindow/: background.rs  box_model.rs  charselect.rs  mod.rs  modal.rs  mouseevent.rs  palette.rs  paneselect.rs  resize.rs  selection.rs  webgpu.rs
weenyterm-gui/src/termwindow/render/: fancy_tab_bar.rs  mod.rs  paint.rs  pane.rs  screen_line.rs  tab_bar.rs  window_buttons.rs
weenyterm-input-types/: Cargo.toml
weenyterm-input-types/src/: lib.rs
weenyterm-mux-server/: Cargo.toml
weenyterm-mux-server-impl/: Cargo.toml
weenyterm-mux-server/src/: main.rs  ossl.rs
weenyterm-open-url/: Cargo.toml
weenyterm-ssh/: Cargo.toml
weenyterm-toast-notification/: Cargo.toml
weenyterm-version/: Cargo.toml  build.rs
window/: Cargo.toml
(+525 files in other folders)
