[package]
name = "weenyterm-color-types"
version = "0.3.0"
authors = ["Weeny Furlong"]
edition = "2018"
repository = "https://github.com/wez/weenyterm"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]

[dependencies]
csscolorparser = {version="0.6", features=["lab"]}
deltae = "0.3"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"], optional=true}
weenyterm-dynamic = { path = "../weenyterm-dynamic", version="0.2" }
