[package]
name = "luahelper"
version = "0.1.0"
authors = ["Weeny Furlong <weeny@weenyfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0"
log = "0.4"
mlua = "0.9"
weenyterm-dynamic = { path = "../weenyterm-dynamic" }
