[package]
name = "weenyterm-gui"
version = "0.1.0"
authors = ["Weeny Furlong <weeny@weenyfurlong.org>"]
edition = "2018"
build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vendored-fonts", "wayland"]
wayland = ["window/wayland"]
distro-defaults = ["config/distro-defaults"]
vendor-nerd-font-symbols-font = ["weenyterm-font/vendor-nerd-font-symbols"]
vendor-jetbrains-font = ["weenyterm-font/vendor-jetbrains"]
vendor-roboto-font = ["weenyterm-font/vendor-roboto"]
vendor-noto-emoji-font = ["weenyterm-font/vendor-noto-emoji"]
vendored-fonts = [
  "vendor-nerd-font-symbols-font",
  "vendor-jetbrains-font",
  "vendor-roboto-font",
  "vendor-noto-emoji-font"
]
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat"]  # if you are doing ad hoc profiling

[build-dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"
cc = "1.0"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
bytemuck = { version="1.4", features=["derive"]}
chrono = {version="0.4", default-features=false}
clap = {version="4.0", features=["derive"]}
codec = { path = "../codec" }
colorgrad = "0.6"
config = { path = "../config" }
downcast-rs = "1.0"
dhat = {version="0.3", optional=true}
dirs-next = "2.0"
emojis = "0.6"
env-bootstrap = { path = "../env-bootstrap" }
euclid = "0.22"
fastrand = "2.0"
filedescriptor = { version="0.8", path = "../filedescriptor" }
finl_unicode = "1.2"
frecency = { path = "../frecency" }
futures = "0.3"
fuzzy-matcher = "0.3"
hdrhistogram = "7.1"
http_req = "0.10"
image = "0.24.6"
lazy_static = "1.4"
libc = "0.2"
lfucache = { path = "../lfucache" }
log = "0.4"
luahelper = { path = "../luahelper" }
metrics = { version="0.17", features=["std"]}
mlua = {version="0.9", features=["send"]}
mux = { path = "../mux" }
mux-lua = { path = "../lua-api-crates/mux" }
once_cell = "1.8"
ordered-float = "4.1"
parking_lot = "0.12"
portable-pty = { path = "../pty", features = ["serde_support"]}
promise = { path = "../promise" }
rangeset = { path = "../rangeset" }
ratelim= { path = "../ratelim" }
rayon = "1.7"
regex = "1"
serde = {version="1.0", features = ["rc", "derive"]}
serde_json = "1.0"
shlex = "1.1"
smol = "1.2"
tabout = { path = "../tabout" }
tempfile = "3.4"
terminfo = "0.8"
termwiz = { path = "../termwiz" }
termwiz-funcs = { path = "../lua-api-crates/termwiz-funcs" }
textwrap = "0.16"
thiserror = "1.0"
tiny-skia = "0.11"
umask = { path = "../umask" }
unicode-normalization = "0.1"
unicode-segmentation = "1.8"
unicode-width = "0.1"
url = "2"
url-funcs = { path = "../lua-api-crates/url-funcs" }
walkdir = "2"
weenyterm-bidi = { path = "../bidi" }
weenyterm-blob-leases = { path = "../weenyterm-blob-leases", version="0.1", features=["simple_tempdir"] }
weenyterm-client = { path = "../weenyterm-client" }
weenyterm-dynamic = { path = "../weenyterm-dynamic" }
weenyterm-font = { path = "../weenyterm-font" }
weenyterm-gui-subcommands = { path = "../weenyterm-gui-subcommands" }
weenyterm-mux-server-impl = { path = "../weenyterm-mux-server-impl" }
weenyterm-open-url = { path = "../weenyterm-open-url" }
weenyterm-ssh = { path = "../weenyterm-ssh" }
weenyterm-term = { path = "../term", features=["use_serde"] }
weenyterm-toast-notification = { path = "../weenyterm-toast-notification" }
wgpu = "0.18"
window = { path = "../window" }
window-funcs = { path = "../lua-api-crates/window-funcs" }

[target."cfg(windows)".dependencies]
shared_library = "0.1"
uds_windows = "1.0"
winapi = { version = "0.3", features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
    "winsock2",
]}
windows = { version="0.33.0", features = [
    "Win32_UI_Shell",
]}

[dev-dependencies]
k9 = "0.12.0"
env_logger = "0.11"
benchmarking = "0.4"
