[package]
name = "weenyterm-input-types"
version = "0.1.0"
authors = ["Weeny Furlong <weeny@weenyfurlong.org>"]
edition = "2021"
repository = "https://github.com/wez/weenyterm"
description = "config serialization for weenyterm via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
euclid = "0.22"
lazy_static = "1.4"
serde = {version="1.0", features = ["rc", "derive"], optional=true}
weenyterm-dynamic = {path="../weenyterm-dynamic", version="0.2"}

[features]
default = ["serde"]
