[package]
name = "share-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = { path = "../../config" }
weenyterm-dynamic = { path = "../../weenyterm-dynamic" }
lazy_static = "1.4"
luahelper = { path = "../../luahelper" }
ordered-float = "4.1"
