[package]
name = "weenyterm-dynamic-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wez/weenyterm"
description = "config serialization for weenyterm via dynamic json-like data values"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = {version="1.0", features=["extra-traits"]}
